2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Bump mmap limit down to 256 kilobytes.

	* b-fro.c (REASONABLE_MMAP_SIZE): Bump down to 262144.

2010-05-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rewrite parsing.

	* b-grok.h: New file.
	* b-grok.c: New file.
	* b-complain.c (fatal_syntax): Don't output line number if 0.
	* b-complain.h (SYNTAX_ERROR): Specify 0 for line number.
	* b-fro.h (struct atat): New.
	(string_from_atat, atat_put, atat_display): New func decls.
	(ATAT_END, ATAT_TEXT_END, FIXUP_OLD): New macros.
	* b-fro.c: #include <string.h>.
	(string_from_atat, atat_put, atat_display): New funcs.
	* b-kwxout.c (expandline): Don't assign to ‘NEXT (c)’, ‘LEX (lno)’.
	* base.h (struct hshentry): Add members ‘log’, ‘text’;
	delete members ‘insertlns’, ‘deletelns’.
	(struct behavior): Delete member ‘receptive_to_next_hash_key’.
	(struct parse_state): Delete.
	(struct repo): New.
	(struct repository): Add member ‘r’; delete members ‘admin’, ‘ndelt’.
	(struct top): Delete member ‘parse_state’.
	(LEX, NEXT, ADMIN): Delete macros.
	(GROK): New macro.
	(copystring, enterstring, editstring): Update func decls.
	(write_desc_maybe): New func decl.
	(Lexinit, nextlex, eoflex, getlex, getkeyopt, getkey, getkeystring)
	(getid, getnum, must_get_delta_num, readstring, printstring, savestring)
	(getadmin, gettree, getdesc, free_NEXT_str): Delete func decls.
	* ci.c: #include "b-grok.h".
	(removelock): Use ‘GROK (locks)’.
	(addelta): Use ‘REPO (r)’, ‘GROK (branch)’.
	(main): No longer call ‘gettree’, ‘Lexinit’, ‘getadmin’.
	Instead, use ‘grok_resynch’.
	* co.c (rmlock): Use ‘GROK (locks)’.
	(main): No longer call ‘gettree’, ‘getdesc’;
	use ‘GROK (branch)’, ‘write_desc_maybe’.
	* rcs.c (scanlogtext): Take pointer to list of deltas;
	rewrite to walk list of deltas instead of scanning input;
	update calls to ‘editstring’, ‘enterstring’.
	(doaccess): Use ‘GROK (access)’.
	(breaklock, branchpoint): Use ‘GROK (locks)’.
	(doassoc): Use ‘GROK (symbols)’.