@@ -58,6 +58,27 @@ do_and_show 'rcs -efoo $w'
 test 'bar baz' = "$(getaccesslist)" \
     || exit 1
 
+##
+# The regression introduced 2010-04-27, "Add abstraction: fro_spew_partial",
+# manifests as the omission of all output produced via ‘fro_spew_partial’.
+# This includes ‘atat_display’ output used, e.g., to display the log.
+##
+
+# Arrange for the RCS file size to surpass the ‘RM_STDIO’ threshold.
+# (At time of writing this is hardcoded to 256 kilobytes.)
+echo 'to be (bloated) or not to be be (bloated), that is the question' > $wd/B00
+for i in 00 01 02 03 04 05 06 07 08 09 10 11 ; do
+    cat $wd/B$i $wd/B$i > $wd/B$(printf "%02d" $(expr 1 + $i))
+done
+co -l $w
+cat $wd/B12 >> $w
+ci -u -mbloat $w
+do_rlog | tee $wd/last-rlog
+
+# We expect rlog(1) to work.
+grep '|bloat' $wd/last-rlog \
+    || exit 1
+
 exit 0
 
 # t001.test ends here
