@@ -1,3 +1,11 @@
+2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Fix bug: Output proper range for ‘RM_STDIO’ fro.
+
+	Regression introduced 2010-04-27, "Add abstraction: fro_spew_partial".
+	* t001.test: Add a test to check proper rlog(1) output,
+	given an RCS file bloated into into ‘RM_STDIO’ territory.
+
 2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Fix bug: Resolve ‘BRNUM.’ correctly.
